--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "linebot_test",
   "version": "1.0.0",
   "description": "",
-  "engines": {
-    "node": "18.x",
-    "npm":  "9.x"
-  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "node index.js"
   },
-  "author": "TAKE",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^8.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
