--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "version": 2,
-  "route": [
-    { "src": "/", "dest": "api/server.js" },
-    { "src": "/webhook", "dest": "api/server.js" }
-  ]
+  "version": 2
 }
